tests/ui-stable/transmute-ref-src-not-nocell.stderr
error[E0277]: the trait bound `Src: Immutable` is not satisfied
  --> tests/ui-stable/transmute-ref-src-not-nocell.rs:21:34
   |
21 | const SRC_NOT_IMMUTABLE: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                  |
   |                                  unsatisfied trait bound
   |                                  required by a bound introduced by this call
   |
help: the trait `Immutable` is not implemented for `Src`
  --> tests/ui-stable/transmute-ref-src-not-nocell.rs:18:1
   |
18 | struct Src(AU16);
   | ^^^^^^^^^^
   = note: Consider adding `#[derive(Immutable)]` to `Src`
   = help: the following other types implement trait `Immutable`:
             &T
             &mut T
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
           and $N others
note: required by a bound in `AssertSrcIsImmutable`
  --> tests/ui-stable/transmute-ref-src-not-nocell.rs:21:34
   |
21 | const SRC_NOT_IMMUTABLE: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsImmutable`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Src: Immutable` is not satisfied
  --> tests/ui-stable/transmute-ref-src-not-nocell.rs:21:34
   |
21 | const SRC_NOT_IMMUTABLE: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Immutable` is not implemented for `Src`
  --> tests/ui-stable/transmute-ref-src-not-nocell.rs:18:1
   |
18 | struct Src(AU16);
   | ^^^^^^^^^^
   = note: Consider adding `#[derive(Immutable)]` to `Src`
   = help: the following other types implement trait `Immutable`:
             &T
             &mut T
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
           and $N others
note: required by a bound in `AssertSrcIsImmutable`
  --> tests/ui-stable/transmute-ref-src-not-nocell.rs:21:34
   |
21 | const SRC_NOT_IMMUTABLE: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsImmutable`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
